# mkdocs-material

./: .babelrc  .browserslistrc  .dockerignore  .editorconfig  .env  .eslintcache  .eslintignore  .eslintrc  .eslintrc.js  .flowconfig  .gemini.yml  .gitignore  .mocharc.json  .modernizr-autorc  .netlify  .pylintrc  .sass-lint.yml  .stylelintignore  .stylelintrc  .travis.sh  .travis.yml  .travisignore  .yamllint.yaml  404.html  CAPPUCCIN_THEME.md  CHANGELOG  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DOCKER_BUILD_TROUBLESHOOTING.md  Dockerfile  Dockerfile.local  Dockerfile.prod  Document how to build locally, stage a change for PR, and submit a PR for modifying the code.md  GITHUB_DEPLOYMENT.md  Gulpfile.babel.js  Gulpfile.js  LICENSE  LINUX_DEPLOYMENT.md  (+38 more)
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.githooks/commit-msg/: skip.sh
.githooks/post-merge/: install.sh  npm-update.sh
.githooks/pre-commit/: branch.sh  check.sh  lint.sh
.github/: CODEOWNERS  FUNDING.yml  ISSUE_TEMPLATE.md  dependabot.yml  pull.yml
.github/DISCUSSION_TEMPLATE/: _.yaml  general.yaml
.github/ISSUE_TEMPLATE/: 01-report-a-bug.yml  02-report-a-docs-issue.yml  03-request-a-change.yml  04-add-a-translation.yml  04-add-translations.yml  bug.md  bug.yml  change-request.yml  config.yml  docs-issue.yml  feature.md  feature.yml  question.md  translate.md  translate.yml
.github/workflows/: azure-static-web-apps-lively-coast-0865cb510.yml  build.yaml  build.yml  ci.yml  dependabotautomerge.yml  deploy.yml  documentation.yml  github-dependents-info.yml  package.yml  publish.yml  python-package-conda.yml
alternatives/: index.html
assets/javascripts/: bundle.4b42b5e6.min.js.map  bundle.66f76809.min.js  vendor.a018d6bb.min.js.map
assets/stylesheets/: main.9ba751a9.min.css  main.ce7da9e3.min.css  main.ce7da9e3.min.css.map  palette.31e6bbac.min.css  palette.31e6bbac.min.css.map  palette.96b5c56e.min.css
blog/: index.html
browser-support/: index.html
changelog/: index.html
changelog/insiders/: index.html
contributing/: index.html
conventions/: index.html
creating-your-site/: index.html
customization/: index.html
data-privacy/: index.html
deprecations/: index.html
docs/: .meta.yml  alternatives.md  authors-notes.md  blocks.md  browser-support.md  changelog.md  cheat-sheet.md  compliance.md  contributing.md  conventions.md  creating-your-site.md  customization.md  data-privacy.md  deprecations.md  enterprise-support.md  getting-started.md  index.md  insiders.md  license.md  philosophy.md  publishing-your-site.md  release-notes.md  sandbox.md  schema.json  specimen.md  sponsorship.md  support.md  team.md  troubleshooting.md  tutorials.md  upgrade.md  upgrading.md
docs/Folder Blog/: index.md
docs/Folder GolangAPI/: Apply_for_leave.md  Cancel_a_leave_request.md  Check_attendance_for_a_user.md  Commit_a_user.md  Delete_a_user.md  Get_absence_information_for_a_user.md  Get_all_commitment_data.md  Get_consistency_statistics.md  Get_leaderboard_data.md  Get_leave_details_for_a_user.md  Get_leave_request_details.md  Get_leave_stats_for_a_user.md  Handle_attributes.md  Handle_benchmark_votes.md  Handle_organization_activity.md  Handle_profile_performance_data.md  Handle_votes.md  Perform_a_search.md  Refresh_commitment_data.md  Root_endpoint.md  WebSocket_endpoint_for_chat.md  WebSocket_endpoint_for_reactions.md
docs/Folder Karma Core/: Get_default_feedback_cache copy 5.md
docs/Golangapi/: Admin_review_of_leave_requests.md  Get_attendance_statistics.md
docs/blog/: .authors.yml  .meta.yml  index.md
docs/bug-report/: index.md  reproduction.md
docs/changelog/: 5.x.md  index.md  insiders.md
docs/contributing/: adding-a-translation.md  adding-translations.md  index.md  making-a-pull-request.md  reporting-a-bug.md  reporting-a-docs-issue.md  requesting-a-change.md
docs/css/: custom.css
docs/embedding/: evernote.md  excel.md  github.md  jing.md  lucid.md
docs/extensions/: admonition.md  codehilite.md  footnotes.md  meta.md  metadata.md  permalinks.md  pymdown.md  revision-date.md  revision_date.md
docs/faq/: index.md  insiders-version.md  sponsoring.md
docs/getting-started/: creating-your-site.md  customization.md  data-privacy.md  publishing-your-site.md  troubleshooting.md
docs/guides/: adding-a-git-repository.md  changing-colors.md  changing-the-fonts.md  changing-the-language.md  creating-a-reproduction.md  navigation.md  setting-up-navigation.md  syntax-highlighting.md  (+1 more)
examples/: README.md  cappuccin-theme-example.yml
false/: application-palette.css.map  application.css.map
flow/: application.js  modernizr.js
gemini-report/: index.html  report.css  report.min.js
getting-started/: index.html
includes/: mkdocs.md
insiders/: index.html
lib/: .eslintrc
license/: index.html
material/: 404.html  __init__.py  base.html  blog-archive.html  blog-post.html  blog.html  drawer.html  emoji.py  footer.html  header.html  main.html  manifest.json  mike.py  mkdocs_theme.yml  nav-item.html  nav.html  serviceworker.js  toc-item.html  toc.html
materializr/: base.html  drawer.html  manifest.json  toc.html
philosophy/: index.html
publishing-your-site/: index.html
reference/: index.html
schema/: extensions.json
scripts/: build  clean  flow  help  lint  pypi-up  start  test  travis
search/: search_index.json
site/: 404.html  index.html
sponsorship/: index.html
src/: .babelrc  404.html  __init__.py  base.html  blog-category.html  blog-post.html  blog.html  drawer.html  footer.html  header.html  main.html  mkdocs_theme.yml  nav-item.html  nav.html  redirect.html  serviceworker.js  toc-item.html  toc.html
tests/: .babelrc  .eslintrc  index.js  index.ts  karma.conf.js  karma.conf.ts
tools/: index.ts
troubleshooting/: index.html
typings/: copy-webpack-plugin.d.ts  css-mqpacker.d.ts  dom.d.ts  event-hooks-webpack-plugin.d.ts  extract-text-webpack-plugin.d.ts  globals.d.ts  imagemin-webpack-plugin.d.ts  index.d.ts  karma.d.ts  lunr.d.ts  webpack-manifest-plugin.d.ts
upgrade/: index.html
upgrading/: index.html
(+6034 files in other folders)
